# no-crt-template

./: CMakeLists.txt
noCrtTemplate/: CMakeLists.txt  main.cpp  ncrt_memory.cpp  noCrtTemplate.vcxproj
